--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,12 @@ buck-out/
 
 # CocoaPods
 /ios/Pods/
+
+#awsmobilejs
+appsync-info.json
+aws-info.json
+project-info.json
+aws-exports.*
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
