--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,9 @@ android {
 }
 
 dependencies {
+    implementation project(':rn-fetch-blob')
+    implementation project(':react-native-fetch-blob')
+    implementation project(':react-native-pdf')
     implementation project(':amazon-cognito-identity-js')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
