--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,10 @@ target 'dergilik' do
 
   pod 'RNAWSCognito', :path => '../node_modules/amazon-cognito-identity-js'
 
+  pod 'react-native-pdf', :path => '../node_modules/react-native-pdf'
+
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'dergilikTests' do
     inherit! :search_paths
     # Pods for testing
