--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "amazon-cognito-identity-js": "^3.2.1",
     "aws-amplify": "^2.2.1",
     "aws-amplify-react-native": "^2.2.3",
+    "aws-sdk": "^2.595.0",
     "axios": "^0.19.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
