--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,6 +188,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-sqlite-2')
     implementation project(':rn-fetch-blob')
     implementation project(':react-native-pdf')
     implementation project(':amazon-cognito-identity-js')
