--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,8 @@ target 'dergilik' do
 
   pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
+  pod 'RNSqlite2', :path => '../node_modules/react-native-sqlite-2'
+
   target 'dergilikTests' do
     inherit! :search_paths
     # Pods for testing
