--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,8 @@ target 'dergilik' do
 
   pod 'RNSqlite2', :path => '../node_modules/react-native-sqlite-2'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'dergilikTests' do
     inherit! :search_paths
     # Pods for testing
