--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-pdf": "^6.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-sqlite-2": "^3.0.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-navigation": "4.0.9",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
