--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-sdk": "^2.595.0",
     "axios": "^0.19.0",
     "react": "16.9.0",
+    "react-addons-update": "^15.6.2",
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-pdf": "^6.0.1",
@@ -25,6 +26,10 @@
     "react-navigation": "4.0.9",
     "react-navigation-stack": "^1.10.3",
     "react-navigation-tabs": "^2.6.2",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
