--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.9.0",
     "react-addons-update": "^15.6.2",
     "react-native": "0.61.5",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-pdf": "^6.0.1",
     "react-native-reanimated": "^1.4.0",
