--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-modal": "^11.5.3",
     "react-native-pdf": "^6.0.1",
     "react-native-reanimated": "^1.4.0",
     "react-native-sqlite-2": "^3.0.1",
