--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react": "16.9.0",
     "react-addons-update": "^15.6.2",
     "react-native": "0.61.5",
+    "react-native-animated-loader": "0.0.8",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-modal": "^11.5.3",
     "react-native-pdf": "^6.0.1",
     "react-native-reanimated": "^1.4.0",
+    "react-native-spinkit": "^1.5.0",
     "react-native-sqlite-2": "^3.0.1",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "4.0.9",
