--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.61.5",
     "react-native-animated-loader": "0.0.8",
     "react-native-elements": "^1.2.7",
+    "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.5.2",
     "react-native-modal": "^11.5.3",
     "react-native-pdf": "^6.0.1",
@@ -34,7 +35,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "shorthash": "0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
